--- a/shohroh-backend/package.json
+++ b/shohroh-backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "sequelize": "^6.31.0",
     "socket.io": "^4.8.1",
